# activity_tracker

./: README.md  pyproject.toml  requirements.txt  setup.py
activity_tracker/: __init__.py  config.py  tracker.py
mac_activity_tracker/: _version.py  config.py  database.py  tracker.py
