[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-tracker"
version = "0.1.0"
description = "Monitor and analyze your daily work activities"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["productivity", "time-tracking", "activity-monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
